--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -63,12 +63,12 @@
           </a>
         </li>
         <!-- Nav Item -->
-        <li class="nav-item" id="viewListAccount">
+        <!-- <li class="nav-item" id="viewListAccount">
           <a class="nav-link" onclick="clickAccountManagement()">
             <i class="fa fa-user"></i>
             <span>Account Management</span>
           </a>
-        </li>
+        </li> -->
 
         <!-- Nav Item -->
         <li class="nav-item" id="viewListGroup">
@@ -113,8 +113,8 @@
                 </a>
                 <!-- Dropdown - User Information -->
                 <div class=" dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                  <a class="dropdown-item" href="#">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Profile
+                  <a class="dropdown-item" onclick="openProfile()">
+                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400" ></i>Profile
                   </a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
